Updated fields to include petition status.

--- a/config.json
+++ b/config.json
@@ -12,6 +12,7 @@
         "overview",
         "creator_url",
         "created_at",
-        "category"
+        "category",
+        "status"
     ]
 }
